--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "dotenv": "^8.2.0",
     "netlify-lambda": "^1.6.3",
     "nodemailer": "^6.4.8",
-    "nodemailer-smtp-transport": "^2.7.4",
-    "form-data": "^3.0.0"
+    "nodemailer-smtp-transport": "^2.7.4"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.40",
