--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API for sending emails",
   "main": "index.js",
   "scripts": {
-    "start": "netlify-lambda serve ./src/lambdas",
+    "start": "netlify-lambda serve ./src/lambdas -p 9004",
     "build": "netlify-lambda build ./src/lambdas"
   },
   "repository": {
